Corrected overflows on toolbar

--- a/SimpleSeer/static/app/styles/toolbar.less
+++ b/SimpleSeer/static/app/styles/toolbar.less
@@ -4,7 +4,6 @@
   width: 32px;
   background: url("../img/MT_666666.png") repeat;
   box-shadow: 1px 0px 0px #000, inset -1px 0px 5px rgba(0, 0, 0, .3);
-  overflow-y: auto;
   z-index: 1;
   position: relative;  
 
@@ -76,6 +75,8 @@
 
 #toolbar.expanded {
   width: 239px;
+  overflow-y: auto;
+  overflow-x: hidden;  
 
   #toolbar-toggle {
     background:
